# dsr_ros

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  README.md  codecov.yml  package.xml
.github/workflows/: build.yml  docker_image.yml
dsr_agent/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
dsr_agent/include/dsr_agent/: agent_node.hpp  generic_agent.hpp  nav_agent.hpp  ros_attr_name.hpp  tf_agent.hpp
dsr_agent/launch/: default.launch.py  robot.launch.py
dsr_agent/params/: default_params.yaml  robot_params.yaml
dsr_agent/src/: agent_node.cpp  generic_agent.cpp  generic_agent_node.cpp  nav_agent.cpp  tf_agent.cpp  tf_agent_node.cpp  viewer.cpp
dsr_agent/worlds/: default.json
dsr_agents/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
dsr_agents/include/dsr_agent/: generic_agent.hpp  nav_agent.hpp  qt_executor.hpp
dsr_agents/include/dsr_agents/: action_agent.hpp  agent_node.hpp  docking_agent.hpp  dsr_bridge.hpp  nav_agent.hpp  person_agent.hpp  qt_executor.hpp  ros_to_dsr_types.hpp  semantic_nav_agent.hpp  tf_agent.hpp  topic_agent.hpp  whisper_agent.hpp
dsr_agents/include/dsr_agents/agents/: action_agent.hpp  generic_agent.hpp  nav_agent.hpp  person_agent.hpp  tf_agent.hpp  topic_agent.hpp
dsr_agents/launch/: campero.launch.py  default.launch.py  dsr_bridge_nuc.launch.py  dsr_bridge_robot.launch.py  robot.launch.py
dsr_agents/params/: campero_params.yaml  default_params.yaml  dsr_bridge_params.yaml  robot_params.yaml
dsr_agents/src/: action_agent.cpp  agent_node.cpp  docking_agent.cpp  docking_agent_node.cpp  dsr_bridge.cpp  generic_agent.cpp  nav_agent.cpp  nav_agent_node.cpp  person_agent.cpp  qt_executor.cpp  semantic_nav_agent.cpp  tf_agent.cpp  tf_agent_node.cpp  topic_agent.cpp  topic_agent_node.cpp  viewer.cpp  whisper_agent.cpp
dsr_agents/src/agents/: action_agent.cpp  generic_agent.cpp  nav_agent.cpp  person_agent.cpp  tf_agent.cpp  topic_agent.cpp
dsr_agents/test/: CMakeLists.txt  test_docking_agent.cpp  test_integration_tf_agent.cpp  test_integration_topic_agent.cpp  test_nav_agent.cpp  test_tf_agent.cpp  test_tf_agent_integration.cpp  test_topic_agent.cpp  test_topic_agent_integration.cpp
dsr_bridge/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
dsr_bridge/doc/: bridge_design.xml
dsr_bridge/include/dsr_bridge/: dsr_bridge.hpp
dsr_bridge/launch/: dsr_bridge_nuc.launch.py  dsr_bridge_robot.launch.py
dsr_bridge/params/: default_params.yaml
dsr_bridge/src/: dsr_bridge.cpp  main.cpp
dsr_bridge/test/: CMakeLists.txt  test_bridge.cpp  test_bridge_integration.cpp
dsr_bringup/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
dsr_bringup/launch/: bridge.launch.py  default.launch.py  robot.launch.py
dsr_bringup/params/: bridge_params.yaml  default_params.yaml  robot_params.yaml
dsr_interfaces/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
dsr_interfaces/msg/: Edge.msg  Node.msg
dsr_interfaces/srv/: SaveDSR.srv
dsr_msgs/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
dsr_msgs/msg/: Edge.msg  Graph.msg  Node.msg
dsr_msgs/srv/: GetGraph.srv  SaveDSR.srv
dsr_python/: CHANGELOG.rst  README.md  package.xml  setup.cfg  setup.py
dsr_python/dsr_python/: example_listener.py  node_agent.py
dsr_ros/: CMakeLists.txt  package.xml
dsr_rqt_plugin/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  plugin.xml
dsr_rqt_plugin/include/dsr_rqt_plugin/: dsr_rqt_plugin.hpp
dsr_rqt_plugin/src/dsr_rqt_plugin/: dsr_rqt_plugin.cpp  viewer.cpp
dsr_util/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
dsr_util/include/dsr_util/: action_agent.hpp  agent_node.hpp  dsr_api_ext.hpp  helpers.hpp  node_agent.hpp  qt_executor.hpp  ros_to_dsr_types.hpp  service_agent.hpp
dsr_util/src/: action_agent.cpp  agent_node.cpp  node_agent.cpp  qt_executor.cpp
dsr_util/test/: CMakeLists.txt  test_action_agent.cpp  test_agent_node.cpp  test_dsr.json  test_dsr_api_ext.cpp  test_dsr_setup.hpp  test_helpers.cpp  test_node_agent.cpp  test_qt_executor.cpp
dsr_util/test/utils/: test_dsr_setup.hpp
dsr_util/worlds/: world_with_floor.json  world_with_robot.json
include/dsr_agent/: dsr_agent.hpp  generic_agent.hpp  ros_attr_name.hpp
params/: default_params.yaml
src/: dsr_agent.cpp  dsr_agent_node.cpp  generic_agent.cpp  tf_agent.cpp  tf_agent_node.cpp
