<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dsr_agents</name>
  <version>0.8.0</version>
  <description>Agents to connect ROS nodes with DSR</description>
  <maintainer email="ajtudela@gmail.com">Alberto Tudela</maintainer>
  <license>Apache-2.0</license>
  <author email="ajtudela@gmail.com">Alberto Tudela</author>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>dsr_msgs</depend>
  <depend>dsr_util</depend>
  <depend>fastcdr</depend>
  <depend>fastrtps</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>nav2_util</depend>
  <depend>opennav_docking_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_components</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_msgs</depend>
  <depend>tf2_sensor_msgs</depend>
  <depend>tf2_geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_index_cpp</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>