<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dsr_ros</name>
  <version>1.0.0</version>
  <description>Stack of ROS 2 packages for manage Deep State Representation (DSR) agents</description>
  <maintainer email="ajtudela@gmail.com">Alberto Tudela</maintainer>
  <license>Apache-2.0</license>
  <author email="ajtudela@gmail.com">Alberto Tudela</author>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>dsr_agents</exec_depend>
  <exec_depend>dsr_bringup</exec_depend>
  <exec_depend>dsr_bridge</exec_depend>
  <exec_depend>dsr_msgs</exec_depend>
  <exec_depend>dsr_rqt_plugin</exec_depend>
  <exec_depend>dsr_util</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
